--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -10,6 +10,12 @@
   <tr>
     <td><%= blog.title %></td>
     <td><%= blog.content %></td>
+    <td><%= link_to '編集' , edit_blog_path(blog.id) %></td>
+    <td><%= link_to '確認' , blog_path(blog.id) %></td>
+    <td><%= link_to '抹消' , blog_path(blog.id), method: :delete %></td>
   </tr>
 <% end %>
 </table>
+
+<br>
+<%= link_to '本日の🍜', new_blog_path %>
